# anarchy-agent

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DOCUMENTATION.md  ENHANCED_DOCUMENTATION.md  IMPLEMENTATION.md  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_ROADMAP.md  PROJECT_SUMMARY.md  README.md  TODO.md
deployment/: CORE_FEATURES_DOCUMENTATION.md  LOCAL_DEPLOYMENT_GUIDE.md  install_anarchy.sh  setup_anarchy_agent.sh  test_anarchy_agent.sh
docs/: LLM_INTEGRATION.md  input_workaround.md
examples/: browser_automation.rs  complete_workflow.rs  example_task.rs  example_usage.a.i  file_system_operations.rs  main.rs  main_updated.rs  memory_operations.rs
examples/anarchy-inference/: browser_automation.a.i  complete_workflow.a.i  example_task.a.i  file_system_operations.a.i  main.a.i  memory_operations.a.i  string_dictionary.a.i  string_dictionary_update.a.i  string_dictionary_update2.a.i  string_dictionary_update3.a.i
examples_ai/: complete_workflow.a.i  corrected_syntax_example.a.i  file_system_operations.a.i  input_workaround_example.a.i  main.a.i
examples_ai/enhanced/: enhanced_memory_example.a.i  external_tools_example.a.i  llm_integration_example.a.i  reasoning_capabilities_example.a.i
src/: agent_core.a.i  lib.rs
src/bin_ai/: browser.a.i  bug_fixes.a.i  core.a.i  db.a.i  end_to_end_test.a.i  executor.a.i  file.a.i  integration.a.i  integration_test.a.i  llm.a.i  main.a.i  main_updated.a.i  memory.a.i  network.a.i  parser.a.i  planner.a.i  sandbox.a.i  shell.a.i  string_dictionary.a.i  string_dictionary.json  string_dictionary_updated.a.i  system.a.i  test.a.i  test_components.a.i
src/browser/: Cargo.toml  browser_automation.a.i
src/browser/src/: automation.rs  config.rs  driver.rs  error.rs  lib.rs
src/core/: Cargo.toml
src/core/src/: agent.a.i  agent.rs  config.a.i  config.rs  error.a.i  error.rs  lib.a.i  lib.rs
src/dictionary/: string_dictionary.a.i
src/executor/: Cargo.toml
src/executor/src/: config.rs  error.rs  lib.rs  parser.rs  sandbox.rs  symbols.rs
src/executor/src/input_workaround/: mod.rs
src/filesystem/: file_system_operations.a.i
src/input/: input_workaround.a.i
src/integration/: workflow_integration.a.i
src/llm/: config_manager.a.i  enhanced_llm.a.i  llm_context_manager.a.i  llm_integration.a.i  llm_manager.a.i  model_selector.a.i  prompt_templates.md  provider_registry.a.i
src/llm/integration/: llm_integration.a.i
src/llm/providers/: azure_provider.a.i  claude_provider.a.i  local_provider.a.i  openai_provider.a.i  provider_interface.a.i
src/llm/utils/: api_key_manager.a.i  fallback_manager.a.i  http_utils.a.i
src/memory/: Cargo.toml  enhanced_memory.a.i
src/memory/enhanced/: hierarchical_memory.a.i  memory_integration.a.i  vector_memory.a.i
src/memory/src/: config.rs  context.rs  error.rs  lib.rs  storage.rs
src/memory/src/enhanced/: database.rs  memory.rs  mod.rs  vector_store.rs
src/planner/: Cargo.toml
src/planner/src/: config.rs  error.rs  lib.rs  llm.rs  planning.rs
src/planner/src/reasoning/: mod.rs  pattern_matcher.rs  reasoning_system.rs  template_engine.rs
src/reasoning/: chain_of_thought.a.i  planning_system.a.i  reasoning_integration.a.i  self_correction.a.i
src/system/: Cargo.toml
src/system/src/: config.rs  error.rs  file.rs  lib.rs  sandbox.rs  shell.rs
src/tools/: file_system_tools.a.i  shell_tools.a.i  tool_interface.a.i  tools_integration.a.i  web_tools.a.i
tests/: input_workaround_test.a.i  integration_test.a.i  memory_system_test.a.i  reasoning_system_test.a.i  test_llm_integration.a.i
tests/enhanced/: external_tools_test.a.i  llm_integration_test.a.i  memory_system_test.a.i  reasoning_capabilities_test.a.i
