[package]
name = "browser"
version = "0.1.0"
edition = "2021"
description = "Browser automation module for Anarchy Agent"
authors = ["APiTJLillo"]
license = "MIT"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
tracing = "0.1"

# Browser automation
fantoccini = "0.19"
headless_chrome = "1.0"
scraper = "0.16"
