[package]
name = "core"
version = "0.1.0"
edition = "2021"
description = "Core module for Anarchy Agent"
authors = ["APiTJLillo"]
license = "MIT"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
tracing = "0.1"

# Internal dependencies
planner = { path = "../planner" }
executor = { path = "../executor" }
memory = { path = "../memory" }
browser = { path = "../browser" }
system = { path = "../system" }
