[package]
name = "memory"
version = "0.1.0"
edition = "2021"
description = "Memory module for Anarchy Agent"
authors = ["APiTJLillo"]
license = "MIT"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
tracing = "0.1"

# Storage dependencies
rusqlite = { version = "0.28", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.21"
