[package]
name = "planner"
version = "0.1.0"
edition = "2021"
description = "Planner module for Anarchy Agent"
authors = ["APiTJLillo"]
license = "MIT"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
tracing = "0.1"

# LLM integration
llm = "0.1.1" # Example LLM library, replace with actual implementation

# Internal dependencies
memory = { path = "../memory" }
