[package]
name = "system"
version = "0.1.0"
edition = "2021"
description = "System interaction module for Anarchy Agent"
authors = ["APiTJLillo"]
license = "MIT"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
tracing = "0.1"

# File system and OS interaction
dirs = "5.0"
walkdir = "2.3"
regex = "1.8"
which = "4.4"
tempfile = "3.5"

# Process management
tokio-process = "0.2"
os_info = "3.5"
